[workspace]
exclude = ["bin/utils/moonkey"]
members = [
    "bin/utils/moonkey",
    "client/rpc/dev",
    "client/rpc/finality",
    "client/vrf",
    "node",
    "node/cli",
    "node/service",
    "pallets/asset-manager",
    "pallets/erc20-xcm-bridge",
    "pallets/ethereum-xcm",
    "pallets/moonbeam-foreign-assets",
    "pallets/moonbeam-lazy-migrations",
    "pallets/moonbeam-orbiters",
    "pallets/moonbeam-xcm-benchmarks",
    "pallets/parachain-staking",
    "pallets/precompile-benchmarks",
    "pallets/proxy-genesis-companion",
    "pallets/xcm-transactor",
    "pallets/xcm-weight-trader",
    "precompiles/balances-erc20",
    "precompiles/batch",
    "precompiles/call-permit",
    "precompiles/collective",
    "precompiles/conviction-voting",
    "precompiles/crowdloan-rewards",
    "precompiles/foreign-asset-migrator",
    "precompiles/gmp",
    "precompiles/identity",
    "precompiles/parachain-staking",
    "precompiles/precompile-registry",
    "precompiles/preimage",
    "precompiles/proxy",
    "precompiles/referenda",
    "precompiles/relay-encoder",
    "precompiles/relay-data-verifier",
    "precompiles/xcm-transactor",
    "precompiles/xtokens",
    "precompiles/p256verify",
    "primitives/storage-proof",
    "runtime/moonbase",
    "runtime/moonbeam",
    "runtime/moonriver",
    "runtime/relay-encoder",
    "runtime/summarize-precompile-checks",
]
resolver = "2"

[workspace.package]
authors = ["PureStake"]
repository = "https://github.com/PureStake/moonbeam"

[workspace.dependencies]
# Dependencies are split into 2 groups: wasm and client.
# - "wasm" dependencies requires to be no_std compatible, which often requires
#   `default-features = false`. When used in a client-side crate the "std" feature should be enabled
#   there if it exists.
# - "client" dependencies are only used in the client, and thus don't need to be no_std compatible.

# Moonbeam (wasm)
account = { path = "primitives/account", default-features = false }
evm-tracing-events = { path = "primitives/rpc/evm-tracing-events", default-features = false }
moonbeam-core-primitives = { path = "core-primitives", default-features = false }
moonbeam-primitives-ext = { path = "primitives/ext", default-features = false }
moonbeam-rpc-primitives-debug = { path = "primitives/rpc/debug", default-features = false, features = [
    "runtime-3000",
] }
moonbeam-rpc-primitives-txpool = { path = "primitives/rpc/txpool", default-features = false }
storage-proof-primitives = { path = "primitives/storage-proof", default-features = false }

moonbeam-evm-tracer = { path = "runtime/evm_tracer", default-features = false }
moonbeam-relay-encoder = { path = "runtime/relay-encoder", default-features = false }
moonbeam-runtime-common = { path = "runtime/common", default-features = false }

moonbeam-xcm-benchmarks = { path = "pallets/moonbeam-xcm-benchmarks", default-features = false }
pallet-asset-manager = { path = "pallets/asset-manager", default-features = false }
pallet-erc20-xcm-bridge = { path = "pallets/erc20-xcm-bridge", default-features = false }
pallet-ethereum-xcm = { path = "pallets/ethereum-xcm", default-features = false }
pallet-moonbeam-foreign-assets = { path = "pallets/moonbeam-foreign-assets", default-features = false }
pallet-moonbeam-lazy-migrations = { path = "pallets/moonbeam-lazy-migrations", default-features = false }

pallet-evm-precompile-author-mapping = { path = "precompiles/author-mapping", default-features = false }
pallet-evm-precompile-balances-erc20 = { path = "precompiles/balances-erc20", default-features = false }
pallet-evm-precompile-batch = { path = "precompiles/batch", default-features = false }
pallet-evm-precompile-call-permit = { path = "precompiles/call-permit", default-features = false }
pallet-evm-precompile-collective = { path = "precompiles/collective", default-features = false }
pallet-evm-precompile-conviction-voting = { path = "precompiles/conviction-voting", default-features = false }
pallet-evm-precompile-crowdloan-rewards = { path = "precompiles/crowdloan-rewards", default-features = false }
pallet-evm-precompile-gmp = { path = "precompiles/gmp", default-features = false }
pallet-evm-precompile-identity = { path = "precompiles/identity", default-features = false }
pallet-evm-precompile-parachain-staking = { path = "precompiles/parachain-staking", default-features = false }
pallet-evm-precompile-preimage = { path = "precompiles/preimage", default-features = false }
pallet-evm-precompile-proxy = { path = "precompiles/proxy", default-features = false }
pallet-evm-precompile-randomness = { path = "precompiles/randomness", default-features = false }
pallet-evm-precompile-referenda = { path = "precompiles/referenda", default-features = false }
pallet-evm-precompile-registry = { path = "precompiles/precompile-registry", default-features = false }
pallet-evm-precompile-relay-encoder = { path = "precompiles/relay-encoder", default-features = false }
pallet-evm-precompile-relay-verifier = { path = "precompiles/relay-data-verifier", default-features = false }
pallet-evm-precompile-xcm-transactor = { path = "precompiles/xcm-transactor", default-features = false }
pallet-evm-precompile-xcm-utils = { path = "precompiles/xcm-utils", default-features = false }
pallet-evm-precompile-xtokens = { path = "precompiles/xtokens", default-features = false }
pallet-evm-precompile-p256verify = { path = "precompiles/p256verify", default-features = false }
pallet-evm-precompileset-assets-erc20 = { path = "precompiles/assets-erc20", default-features = false }
pallet-moonbeam-orbiters = { path = "pallets/moonbeam-orbiters", default-features = false }
pallet-parachain-staking = { path = "pallets/parachain-staking", default-features = false }
pallet-precompile-benchmarks = { path = "pallets/precompile-benchmarks", default-features = false }
pallet-proxy-genesis-companion = { path = "pallets/proxy-genesis-companion", default-features = false }
pallet-xcm-transactor = { path = "pallets/xcm-transactor", default-features = false }
pallet-xcm-weight-trader = { path = "pallets/xcm-weight-trader", default-features = false }
precompile-foreign-asset-migrator = { path = "precompiles/foreign-asset-migrator", default-features = false }
xcm-primitives = { path = "primitives/xcm", default-features = false }

pallet-crowdloan-rewards = { git = "https://github.com/moonbeam-foundation/crowdloan-rewards", branch = "moonbeam-polkadot-stable2409", default-features = false }

# Moonbeam (client)
moonbeam-cli = { path = "node/cli", default-features = false }
moonbeam-cli-opt = { path = "node/cli-opt", default-features = false }
moonbeam-service = { path = "node/service", default-features = false }

moonbeam-client-evm-tracing = { path = "client/evm-tracing" }
moonbeam-dev-rpc = { path = "client/rpc/dev" }
moonbeam-finality-rpc = { path = "client/rpc/finality" }
moonbeam-rpc-core-debug = { path = "client/rpc-core/debug" }
moonbeam-rpc-core-trace = { path = "client/rpc-core/trace" }
moonbeam-rpc-core-txpool = { path = "client/rpc-core/txpool" }
moonbeam-rpc-core-types = { path = "client/rpc-core/types" }
moonbeam-rpc-debug = { path = "client/rpc/debug" }
moonbeam-rpc-trace = { path = "client/rpc/trace" }
moonbeam-rpc-txpool = { path = "client/rpc/txpool" }
moonbeam-vrf = { path = "client/vrf" }

moonbase-runtime = { path = "runtime/moonbase" }
moonbeam-runtime = { path = "runtime/moonbeam" }
moonriver-runtime = { path = "runtime/moonriver" }

frame-benchmarking = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409", default-features = false }
frame-executive = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409", default-features = false }
frame-support = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409", default-features = false }
frame-system = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409", default-features = false }
frame-system-benchmarking = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409", default-features = false }
frame-system-rpc-runtime-api = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409", default-features = false }
frame-try-runtime = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409", default-features = false }
pallet-assets = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409", default-features = false }
pallet-balances = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409", default-features = false }
pallet-collective = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409", default-features = false }
pallet-conviction-voting = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409", default-features = false }
pallet-identity = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409", default-features = false }
pallet-message-queue = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409", default-features = false }
pallet-multisig = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409", default-features = false }
pallet-preimage = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409", default-features = false }
pallet-parameters = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409", default-features = false }
pallet-proxy = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409", default-features = false }
pallet-referenda = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409", default-features = false }
pallet-root-testing = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409", default-features = false }
pallet-scheduler = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409", default-features = false }
pallet-society = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409", default-features = false }
pallet-staking = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409", default-features = false }
pallet-sudo = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409", default-features = false }
pallet-timestamp = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409", default-features = false }
pallet-transaction-payment = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409", default-features = false }
pallet-treasury = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409", default-features = false }
pallet-utility = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409", default-features = false }
pallet-whitelist = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409", default-features = false }
parity-scale-codec = { version = "3.2.2", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.0", default-features = false, features = [
    "derive",
] }
sp-api = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409", default-features = false }
sp-application-crypto = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409", default-features = false }
sp-block-builder = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409", default-features = false }
sp-consensus-babe = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409", default-features = false }
sp-consensus-slots = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409", default-features = false }
sp-core = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409", default-features = false }
sp-debug-derive = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409", default-features = false }
sp-externalities = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409", default-features = false }
sp-inherents = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409", default-features = false }
sp-io = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409", default-features = false }
sp-keystore = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409", default-features = false }
sp-offchain = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409", default-features = false }
sp-runtime = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409", default-features = false }
sp-runtime-interface = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409", default-features = false }
sp-session = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409", default-features = false }
sp-std = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409", default-features = false }
sp-state-machine = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409", default-features = false }
sp-tracing = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409", default-features = false }
sp-transaction-pool = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409", default-features = false }
sp-trie = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409", default-features = false }
sp-version = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409", default-features = false }
sp-weights = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409", default-features = false }
sp-genesis-builder = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409", default-features = false }
substrate-fixed = { git = "https://github.com/encointer/substrate-fixed", default-features = false }

# Substrate (client)
frame-benchmarking-cli = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409" }
pallet-transaction-payment-rpc = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409" }
sc-basic-authorship = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409" }
sc-block-builder = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409" }
sc-chain-spec = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409" }
sc-cli = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409" }
sc-client-api = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409" }
sc-client-db = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409" }
sc-consensus = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409" }
sc-consensus-grandpa = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409" }
sc-consensus-manual-seal = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409" }
sc-executor = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409" }
sc-informant = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409" }
sc-network = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409" }
sc-network-common = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409" }
sc-network-sync = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409" }
sc-offchain = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409" }
sc-rpc = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409" }
sc-rpc-api = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409" }
sc-service = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409" }
sc-sysinfo = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409" }
sc-telemetry = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409" }
sc-tracing = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409" }
sc-transaction-pool = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409" }
sc-transaction-pool-api = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409" }
sc-utils = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409" }
sp-blockchain = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409" }
sp-consensus = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409" }
sp-storage = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409" }
sp-timestamp = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409" }
sp-wasm-interface = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409" }
sp-rpc = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409" }
substrate-build-script-utils = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409" }
substrate-frame-rpc-system = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409" }
substrate-prometheus-endpoint = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409" }
substrate-test-client = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409" }
substrate-test-runtime = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409" }
substrate-test-runtime-client = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409" }
substrate-wasm-builder = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409" }
substrate-rpc-client = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409" }

# Frontier (wasm)

ethereum = { version = "0.15.0", default-features = false, features = [
    "with-codec",
] }
ethereum-types = { version = "0.14", default-features = false }
evm = { git = "https://github.com/moonbeam-foundation/evm", branch = "moonbeam-polkadot-stable2409", default-features = false }
evm-gasometer = { git = "https://github.com/moonbeam-foundation/evm", branch = "moonbeam-polkadot-stable2409", default-features = false }
evm-runtime = { git = "https://github.com/moonbeam-foundation/evm", branch = "moonbeam-polkadot-stable2409", default-features = false }
fp-ethereum = { git = "https://github.com/moonbeam-foundation/frontier", branch = "moonbeam-polkadot-stable2409", default-features = false }
fp-evm = { git = "https://github.com/moonbeam-foundation/frontier", branch = "moonbeam-polkadot-stable2409", default-features = false }
fp-rpc = { git = "https://github.com/moonbeam-foundation/frontier", branch = "moonbeam-polkadot-stable2409", default-features = false }
fp-self-contained = { git = "https://github.com/moonbeam-foundation/frontier", branch = "moonbeam-polkadot-stable2409", default-features = false }
pallet-ethereum = { git = "https://github.com/moonbeam-foundation/frontier", branch = "moonbeam-polkadot-stable2409", default-features = false, features = [
    "forbid-evm-reentrancy",
] }
pallet-evm = { git = "https://github.com/moonbeam-foundation/frontier", branch = "moonbeam-polkadot-stable2409", default-features = false, features = [
    "forbid-evm-reentrancy",
] }
pallet-evm-chain-id = { git = "https://github.com/moonbeam-foundation/frontier", branch = "moonbeam-polkadot-stable2409", default-features = false }
pallet-evm-precompile-blake2 = { git = "https://github.com/moonbeam-foundation/frontier", branch = "moonbeam-polkadot-stable2409", default-features = false }
pallet-evm-precompile-bn128 = { git = "https://github.com/moonbeam-foundation/frontier", branch = "moonbeam-polkadot-stable2409", default-features = false }
pallet-evm-precompile-dispatch = { git = "https://github.com/moonbeam-foundation/frontier", branch = "moonbeam-polkadot-stable2409", default-features = false }
pallet-evm-precompile-modexp = { git = "https://github.com/moonbeam-foundation/frontier", branch = "moonbeam-polkadot-stable2409", default-features = false }
pallet-evm-precompile-sha3fips = { git = "https://github.com/moonbeam-foundation/frontier", branch = "moonbeam-polkadot-stable2409", default-features = false }
pallet-evm-precompile-simple = { git = "https://github.com/moonbeam-foundation/frontier", branch = "moonbeam-polkadot-stable2409", default-features = false }
pallet-evm-precompile-storage-cleaner = { git = "https://github.com/moonbeam-foundation/frontier", branch = "moonbeam-polkadot-stable2409", default-features = false }

precompile-utils = { git = "https://github.com/moonbeam-foundation/frontier", branch = "moonbeam-polkadot-stable2409", default-features = false }
precompile-utils-macro = { git = "https://github.com/moonbeam-foundation/frontier", branch = "moonbeam-polkadot-stable2409", default-features = false }


# Frontier (client)
fc-consensus = { git = "https://github.com/moonbeam-foundation/frontier", branch = "moonbeam-polkadot-stable2409" }
fc-db = { git = "https://github.com/moonbeam-foundation/frontier", branch = "moonbeam-polkadot-stable2409" }
fc-api = { git = "https://github.com/moonbeam-foundation/frontier", branch = "moonbeam-polkadot-stable2409" }
fc-mapping-sync = { git = "https://github.com/moonbeam-foundation/frontier", branch = "moonbeam-polkadot-stable2409" }
fc-rpc = { git = "https://github.com/moonbeam-foundation/frontier", branch = "moonbeam-polkadot-stable2409", features = [
    "rpc-binary-search-estimate",
] }
fc-rpc-core = { git = "https://github.com/moonbeam-foundation/frontier", branch = "moonbeam-polkadot-stable2409" }
fc-storage = { git = "https://github.com/moonbeam-foundation/frontier", branch = "moonbeam-polkadot-stable2409" }
fp-consensus = { git = "https://github.com/moonbeam-foundation/frontier", branch = "moonbeam-polkadot-stable2409" }
fp-storage = { git = "https://github.com/moonbeam-foundation/frontier", branch = "moonbeam-polkadot-stable2409" }

# Cumulus (wasm)

cumulus-pallet-dmp-queue = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409", default-features = false }
cumulus-pallet-parachain-system = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409", default-features = false }
cumulus-pallet-xcm = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409", default-features = false }
cumulus-pallet-xcmp-queue = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409", default-features = false }
cumulus-primitives-core = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409", default-features = false }
cumulus-primitives-parachain-inherent = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409", default-features = false }
cumulus-primitives-timestamp = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409", default-features = false }
cumulus-primitives-utility = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409", default-features = false }
cumulus-test-relay-sproof-builder = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409", default-features = false }
cumulus-primitives-storage-weight-reclaim = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409", default-features = false }
parachain-info = { package = "staging-parachain-info", git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409", default-features = false }
parachains-common = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409", default-features = false }

# Cumulus (client)
cumulus-client-cli = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409" }
cumulus-client-collator = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409" }
cumulus-client-consensus-common = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409" }
cumulus-client-consensus-proposer = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409" }
cumulus-client-consensus-relay-chain = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409" }
cumulus-client-network = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409" }
cumulus-client-service = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409" }
cumulus-client-parachain-inherent = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409" }
cumulus-relay-chain-inprocess-interface = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409" }
cumulus-relay-chain-interface = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409" }
cumulus-relay-chain-minimal-node = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409" }
cumulus-relay-chain-rpc-interface = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409" }

# Polkadot / XCM (wasm)
pallet-xcm = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409", default-features = false }
pallet-xcm-benchmarks = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409", default-features = false }
polkadot-core-primitives = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409", default-features = false }
polkadot-parachain = { package = "polkadot-parachain-primitives", git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409", default-features = false }
polkadot-runtime-common = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409", default-features = false }
polkadot-runtime-parachains = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409", default-features = false }
xcm = { package = "staging-xcm", git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409", default-features = false }
xcm-builder = { package = "staging-xcm-builder", git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409", default-features = false }
xcm-executor = { package = "staging-xcm-executor", git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409", default-features = false }
xcm-runtime-apis = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409", default-features = false }

# Polkadot / XCM (client)
#kusama-runtime = { package = "staging-kusama-runtime", git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409" }
polkadot-cli = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409" }
polkadot-primitives = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409" }
#polkadot-runtime = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409" }
polkadot-service = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409" }
rococo-runtime = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409" }
westend-runtime = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409" }
xcm-simulator = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409" }

# Moonkit (wasm)
async-backing-primitives = { git = "https://github.com/Moonsong-Labs/moonkit", branch = "moonbeam-polkadot-stable2409", default-features = false }
moonkit-xcm-primitives = { package = "xcm-primitives", git = "https://github.com/Moonsong-Labs/moonkit", branch = "moonbeam-polkadot-stable2409", default-features = false }
nimbus-primitives = { git = "https://github.com/Moonsong-Labs/moonkit", branch = "moonbeam-polkadot-stable2409", default-features = false }
pallet-async-backing = { git = "https://github.com/Moonsong-Labs/moonkit", branch = "moonbeam-polkadot-stable2409", default-features = false }
pallet-author-inherent = { git = "https://github.com/Moonsong-Labs/moonkit", branch = "moonbeam-polkadot-stable2409", default-features = false }
pallet-author-mapping = { git = "https://github.com/Moonsong-Labs/moonkit", branch = "moonbeam-polkadot-stable2409", default-features = false }
pallet-author-slot-filter = { git = "https://github.com/Moonsong-Labs/moonkit", branch = "moonbeam-polkadot-stable2409", default-features = false }
pallet-emergency-para-xcm = { git = "https://github.com/Moonsong-Labs/moonkit", branch = "moonbeam-polkadot-stable2409", default-features = false }
pallet-evm-precompile-xcm = { git = "https://github.com/Moonsong-Labs/moonkit", branch = "moonbeam-polkadot-stable2409", default-features = false }
pallet-maintenance-mode = { git = "https://github.com/Moonsong-Labs/moonkit", branch = "moonbeam-polkadot-stable2409", default-features = false }
pallet-migrations = { git = "https://github.com/Moonsong-Labs/moonkit", branch = "moonbeam-polkadot-stable2409", default-features = false }
pallet-randomness = { git = "https://github.com/Moonsong-Labs/moonkit", branch = "moonbeam-polkadot-stable2409", default-features = false }
pallet-relay-storage-roots = { git = "https://github.com/Moonsong-Labs/moonkit", branch = "moonbeam-polkadot-stable2409", default-features = false }
session-keys-primitives = { git = "https://github.com/Moonsong-Labs/moonkit", branch = "moonbeam-polkadot-stable2409", default-features = false }

# Moonkit (client)
nimbus-consensus = { git = "https://github.com/Moonsong-Labs/moonkit", branch = "moonbeam-polkadot-stable2409" }

# Other (wasm)
async-trait = { version = "0.1.42" }
blake2-rfc = { version = "0.2.18", default-features = false }
derive_more = "0.99.17"
environmental = { version = "1.1.4", default-features = false }
frame-metadata = { version = "16.0.0", default-features = false, features = [
    "current",
] }
frame-metadata-hash-extension = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", branch = "moonbeam-polkadot-stable2409", default-features = false }
hex = { version = "0.4.3", default-features = false }
hex-literal = { version = "0.4.1", default-features = false }
impl-serde = { version = "0.4.0", default-features = false }
impl-trait-for-tuples = "0.2.2"
libsecp256k1 = { version = "0.7", default-features = false }
log = { version = "0.4.21", default-features = false }
num_enum = { version = "0.5.3", default-features = false }
paste = "1.0.14"
rlp = { version = "0.5.2", default-features = false }
rustc-hex = { version = "2.0.1", default-features = false }
serde = { version = "1.0.197", default-features = false }
sha3 = { version = "0.10", default-features = false }
slices = "0.2.0"
strum = { version = "0.26.3", default-features = false, features = ["derive"] }
strum_macros = "0.24"
smallvec = "1.11.0"
p256 = { version = "0.13.2", default-features = false, features = ["ecdsa"] }
ansi_term = "0.12.1"

# Other (client)

assert_cmd = "2.0.10"
async-io = "1.3"
bip32 = { version = "0.5.1", default-features = false, features = ["bip39"] }
clap = { version = "4.5.3", features = ["derive"] }
clap-num = "=1.1.1"
exit-future = "0.2"
flume = "0.10.9"
futures = { version = "0.3.30" }
jsonrpsee = { version = "0.24.7", default-features = false }
maplit = "1.0.2"
nix = "0.28"
parking_lot = "0.12.1"
primitive-types = "0.12.1"
prometheus = { version = "0.13.0", default-features = false }
rand = "0.8.5"
serde_json = { version = "1.0.114", default-features = false }
similar-asserts = "1.1.0"
tempfile = "3.8.1"
tiny-bip39 = { version = "0.8", default-features = false }
schnorrkel = { version = "0.11.4", default-features = false, features = [
    "preaudit_deprecated",
] }
tokio = { version = "1.37.0" }
tokio-retry = { version = "0.3.0" }
tracing = "0.1.37"
tracing-core = "0.1.32"
trie-root = "0.18.0"
url = { version = "2.4.0" }
thiserror = "1.0.63"

# The list of dependencies below (which can be both direct and indirect dependencies) are crates
# that are suspected to be CPU-intensive, and that are unlikely to require debugging (as some of
# their debug info might be missing) or to require to be frequently recompiled. We compile these
# dependencies with `opt-level=3` even in "dev" mode in order to make "dev" mode more usable.
# The majority of these crates are cryptographic libraries.
#
# Note that this does **not** affect crates that depend on Moonbeam. In other words, if you add
# a dependency on Moonbeam, you have to copy-paste this list in your own `Cargo.toml` (assuming
# that you want the same list). This list is only relevant when running `cargo build` from within
# the Moonbeam workspace.
#
# If you see an error mentioning "profile package spec ... did not match any packages", it
# probably concerns this list.
#
# This list is ordered alphabetically.
[profile.dev.package]
blake2 = { opt-level = 3 }
blake2b_simd = { opt-level = 3 }
chacha20poly1305 = { opt-level = 3 }
cranelift-codegen = { opt-level = 3 }
cranelift-wasm = { opt-level = 3 }
crc32fast = { opt-level = 3 }
crossbeam-deque = { opt-level = 3 }
crypto-mac = { opt-level = 3 }
curve25519-dalek = { opt-level = 3 }
ed25519-zebra = { opt-level = 3 }
futures-channel = { opt-level = 3 }
hash-db = { opt-level = 3 }
hashbrown = { opt-level = 3 }
hmac = { opt-level = 3 }
httparse = { opt-level = 3 }
integer-sqrt = { opt-level = 3 }
k256 = { opt-level = 3 }
keccak = { opt-level = 3 }
libm = { opt-level = 3 }
librocksdb-sys = { opt-level = 3 }
libsecp256k1 = { opt-level = 3 }
libz-sys = { opt-level = 3 }
mio = { opt-level = 3 }
nalgebra = { opt-level = 3 }
num-bigint = { opt-level = 3 }
parking_lot = { opt-level = 3 }
parking_lot_core = { opt-level = 3 }
percent-encoding = { opt-level = 3 }
primitive-types = { opt-level = 3 }
ring = { opt-level = 3 }
rustls = { opt-level = 3 }
secp256k1 = { opt-level = 3 }
sha2 = { opt-level = 3 }
sha3 = { opt-level = 3 }
smallvec = { opt-level = 3 }
snow = { opt-level = 3 }
twox-hash = { opt-level = 3 }
uint = { opt-level = 3 }
wasmi = { opt-level = 3 }
x25519-dalek = { opt-level = 3 }
yamux = { opt-level = 3 }
zeroize = { opt-level = 3 }

# make sure dev builds with backtrace do
# not slow us down
[profile.dev.package.backtrace]
inherits = "release"

[profile.production]
inherits = "release"
debug-assertions = false # Disable debug-assert! for production builds
codegen-units = 1
incremental = false
lto = true

[profile.release]
debug-assertions = true # Enable debug-assert! for non-production profiles
opt-level = 3
# Moonbeam runtime requires unwinding.
panic = "unwind"

[profile.testnet]
debug = 1               # debug symbols are useful for profilers
debug-assertions = true # Enable debug-assert! for non-production profiles
inherits = "release"
overflow-checks = true

#[patch."https://github.com/moonbeam-foundation/frontier"]
#pallet-base-fee = { path = "/Users/tarekkma/Developer/frontier/frame/base-fee" }
#fp-evm = { path = "/Users/tarekkma/Developer/frontier/primitives/evm" }
#pallet-dynamic-fee = { path = "/Users/tarekkma/Developer/frontier/frame/dynamic-fee" }
#fp-dynamic-fee = { path = "/Users/tarekkma/Developer/frontier/primitives/dynamic-fee" }
#pallet-ethereum = { path = "/Users/tarekkma/Developer/frontier/frame/ethereum" }
#fp-consensus = { path = "/Users/tarekkma/Developer/frontier/primitives/consensus" }
#fp-ethereum = { path = "/Users/tarekkma/Developer/frontier/primitives/ethereum" }
#fp-rpc = { path = "/Users/tarekkma/Developer/frontier/primitives/rpc" }
#fp-storage = { path = "/Users/tarekkma/Developer/frontier/primitives/storage" }
#pallet-evm = { path = "/Users/tarekkma/Developer/frontier/frame/evm" }
#fp-account = { path = "/Users/tarekkma/Developer/frontier/primitives/account" }
#pallet-evm-precompile-simple = { path = "/Users/tarekkma/Developer/frontier/frame/evm/precompile/simple" }
#pallet-evm-test-vector-support = { path = "/Users/tarekkma/Developer/frontier/frame/evm/test-vector-support" }
#fp-self-contained = { path = "/Users/tarekkma/Developer/frontier/primitives/self-contained" }
#pallet-evm-precompile-sha3fips = { path = "/Users/tarekkma/Developer/frontier/frame/evm/precompile/sha3fips" }
#pallet-evm-precompile-modexp = { path = "/Users/tarekkma/Developer/frontier/frame/evm/precompile/modexp" }
#pallet-evm-precompile-ed25519 = { path = "/Users/tarekkma/Developer/frontier/frame/evm/precompile/ed25519" }
#pallet-evm-precompile-bn128 = { path = "/Users/tarekkma/Developer/frontier/frame/evm/precompile/bn128" }
#pallet-evm-precompile-blake2 = { path = "/Users/tarekkma/Developer/frontier/frame/evm/precompile/blake2" }
#pallet-evm-precompile-bw6761 = { path = "/Users/tarekkma/Developer/frontier/frame/evm/precompile/bw6761" }
#pallet-evm-precompile-bls12377 = { path = "/Users/tarekkma/Developer/frontier/frame/evm/precompile/bls12377" }
#pallet-evm-precompile-bls12381 = { path = "/Users/tarekkma/Developer/frontier/frame/evm/precompile/bls12381" }
#pallet-evm-precompile-dispatch = { path = "/Users/tarekkma/Developer/frontier/frame/evm/precompile/dispatch" }
#pallet-evm-precompile-curve25519 = { path = "/Users/tarekkma/Developer/frontier/frame/evm/precompile/curve25519" }
#pallet-evm-precompile-storage-cleaner = { path = "/Users/tarekkma/Developer/frontier/frame/evm/precompile/storage-cleaner" }
#precompile-utils = { path = "/Users/tarekkma/Developer/frontier/precompiles" }
#precompile-utils-macro = { path = "/Users/tarekkma/Developer/frontier/precompiles/macro" }
#pallet-evm-chain-id = { path = "/Users/tarekkma/Developer/frontier/frame/evm-chain-id" }
#pallet-hotfix-sufficients = { path = "/Users/tarekkma/Developer/frontier/frame/hotfix-sufficients" }
#fc-api = { path = "/Users/tarekkma/Developer/frontier/client/api" }
#fc-consensus = { path = "/Users/tarekkma/Developer/frontier/client/consensus" }
#fc-rpc-core = { path = "/Users/tarekkma/Developer/frontier/client/rpc-core" }
#fc-rpc = { path = "/Users/tarekkma/Developer/frontier/client/rpc" }
#fc-mapping-sync = { path = "/Users/tarekkma/Developer/frontier/client/mapping-sync" }
#fc-db = { path = "/Users/tarekkma/Developer/frontier/client/db" }
#fc-storage = { path = "/Users/tarekkma/Developer/frontier/client/storage" }
#frontier-template-runtime = { path = "/Users/tarekkma/Developer/frontier/template/runtime" }
#fc-rpc-v2 = { path = "/Users/tarekkma/Developer/frontier/client/rpc-v2" }
#fc-rpc-v2-api = { path = "/Users/tarekkma/Developer/frontier/client/rpc-v2/api" }
#fc-rpc-v2-types = { path = "/Users/tarekkma/Developer/frontier/client/rpc-v2/types" }
#frontier-template-node = { path = "/Users/tarekkma/Developer/frontier/template/node" }
#fc-cli = { path = "/Users/tarekkma/Developer/frontier/client/cli" }
#precompile-utils-tests-external = { path = "/Users/tarekkma/Developer/frontier/precompiles/tests-external" }

[patch."https://github.com/moonbeam-foundation/frontier"]
pallet-base-fee = { git = "https://www.github.com/moonbeam-foundation/frontier" , branch = "tarekkma/pov-fixes" }
fp-evm = { git = "https://www.github.com/moonbeam-foundation/frontier" , branch = "tarekkma/pov-fixes" }
pallet-dynamic-fee = { git = "https://www.github.com/moonbeam-foundation/frontier" , branch = "tarekkma/pov-fixes" }
fp-dynamic-fee = { git = "https://www.github.com/moonbeam-foundation/frontier" , branch = "tarekkma/pov-fixes" }
pallet-ethereum = { git = "https://www.github.com/moonbeam-foundation/frontier" , branch = "tarekkma/pov-fixes", features = [
    "forbid-evm-reentrancy",
]  }
fp-consensus = { git = "https://www.github.com/moonbeam-foundation/frontier" , branch = "tarekkma/pov-fixes" }
fp-ethereum = { git = "https://www.github.com/moonbeam-foundation/frontier" , branch = "tarekkma/pov-fixes" }
fp-rpc = { git = "https://www.github.com/moonbeam-foundation/frontier" , branch = "tarekkma/pov-fixes" }
fp-storage = { git = "https://www.github.com/moonbeam-foundation/frontier" , branch = "tarekkma/pov-fixes" }
pallet-evm = { git = "https://www.github.com/moonbeam-foundation/frontier" , branch = "tarekkma/pov-fixes", features = [
    "forbid-evm-reentrancy",
]  }
fp-account = { git = "https://www.github.com/moonbeam-foundation/frontier" , branch = "tarekkma/pov-fixes" }
pallet-evm-precompile-simple = { git = "https://www.github.com/moonbeam-foundation/frontier" , branch = "tarekkma/pov-fixes" }
pallet-evm-test-vector-support = { git = "https://www.github.com/moonbeam-foundation/frontier" , branch = "tarekkma/pov-fixes" }
fp-self-contained = { git = "https://www.github.com/moonbeam-foundation/frontier" , branch = "tarekkma/pov-fixes" }
pallet-evm-precompile-sha3fips = { git = "https://www.github.com/moonbeam-foundation/frontier" , branch = "tarekkma/pov-fixes" }
pallet-evm-precompile-modexp = { git = "https://www.github.com/moonbeam-foundation/frontier" , branch = "tarekkma/pov-fixes" }
pallet-evm-precompile-ed25519 = { git = "https://www.github.com/moonbeam-foundation/frontier" , branch = "tarekkma/pov-fixes" }
pallet-evm-precompile-bn128 = { git = "https://www.github.com/moonbeam-foundation/frontier" , branch = "tarekkma/pov-fixes" }
pallet-evm-precompile-blake2 = { git = "https://www.github.com/moonbeam-foundation/frontier" , branch = "tarekkma/pov-fixes" }
pallet-evm-precompile-bw6761 = { git = "https://www.github.com/moonbeam-foundation/frontier" , branch = "tarekkma/pov-fixes" }
pallet-evm-precompile-bls12377 = { git = "https://www.github.com/moonbeam-foundation/frontier" , branch = "tarekkma/pov-fixes" }
pallet-evm-precompile-bls12381 = { git = "https://www.github.com/moonbeam-foundation/frontier" , branch = "tarekkma/pov-fixes" }
pallet-evm-precompile-dispatch = { git = "https://www.github.com/moonbeam-foundation/frontier" , branch = "tarekkma/pov-fixes" }
pallet-evm-precompile-curve25519 = { git = "https://www.github.com/moonbeam-foundation/frontier" , branch = "tarekkma/pov-fixes" }
pallet-evm-precompile-storage-cleaner = { git = "https://www.github.com/moonbeam-foundation/frontier" , branch = "tarekkma/pov-fixes" }
precompile-utils = { git = "https://www.github.com/moonbeam-foundation/frontier" , branch = "tarekkma/pov-fixes" }
precompile-utils-macro = { git = "https://www.github.com/moonbeam-foundation/frontier" , branch = "tarekkma/pov-fixes" }
pallet-evm-chain-id = { git = "https://www.github.com/moonbeam-foundation/frontier" , branch = "tarekkma/pov-fixes" }
pallet-hotfix-sufficients = { git = "https://www.github.com/moonbeam-foundation/frontier" , branch = "tarekkma/pov-fixes" }
fc-api = { git = "https://www.github.com/moonbeam-foundation/frontier" , branch = "tarekkma/pov-fixes" }
fc-consensus = { git = "https://www.github.com/moonbeam-foundation/frontier" , branch = "tarekkma/pov-fixes" }
fc-rpc-core = { git = "https://www.github.com/moonbeam-foundation/frontier" , branch = "tarekkma/pov-fixes" }
fc-rpc = { git = "https://www.github.com/moonbeam-foundation/frontier" , branch = "tarekkma/pov-fixes" }
fc-mapping-sync = { git = "https://www.github.com/moonbeam-foundation/frontier" , branch = "tarekkma/pov-fixes" }
fc-db = { git = "https://www.github.com/moonbeam-foundation/frontier" , branch = "tarekkma/pov-fixes" }
fc-storage = { git = "https://www.github.com/moonbeam-foundation/frontier" , branch = "tarekkma/pov-fixes" }
frontier-template-runtime = { git = "https://www.github.com/moonbeam-foundation/frontier" , branch = "tarekkma/pov-fixes" }
fc-rpc-v2 = { git = "https://www.github.com/moonbeam-foundation/frontier" , branch = "tarekkma/pov-fixes" }
fc-rpc-v2-api = { git = "https://www.github.com/moonbeam-foundation/frontier" , branch = "tarekkma/pov-fixes" }
fc-rpc-v2-types = { git = "https://www.github.com/moonbeam-foundation/frontier" , branch = "tarekkma/pov-fixes" }
frontier-template-node = { git = "https://www.github.com/moonbeam-foundation/frontier" , branch = "tarekkma/pov-fixes" }
fc-cli = { git = "https://www.github.com/moonbeam-foundation/frontier" , branch = "tarekkma/pov-fixes" }
precompile-utils-tests-external = { git = "https://www.github.com/moonbeam-foundation/frontier" , branch = "tarekkma/pov-fixes" }
